frontend/src/landingPage.css
@import url("https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bebas+Neue&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");

:root {
  --primary-color: #42200b;
  --secondary-color: #ffc135;
  --tertiary-color: #df1c1c;
  --text-dark: #212529;
  --white: #ffffff;
  --max-width: 1200px;
  --header-font-1: "Alfa Slab One", serif;
  --header-font-2: "Bebas Neue", sans-serif;
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

.section__container {
  max-width: var(--max-width);
  margin: auto;
  padding: 5rem 1rem;
}

.section__header {
  font-size: 3rem;
  font-weight: 500;
  font-family: var(--header-font-1);
  color: var(--primary-color);
  text-align: center;
  line-height: 3.75rem;
  text-shadow: 2px 2px var(--secondary-color);
}

.section__description {
  font-weight: 500;
  color: var(--text-dark);
  line-height: 1.75rem;
}

.btn {
  padding: 1rem 1.5rem;
  outline: none;
  border: none;
  font-size: 1rem;
  color: var(--white);
  background-color: var(--tertiary-color);
  transition: 0.3s;
  cursor: pointer;
}

.btn:hover {
  background-color: var(--primary-color);
}

img {
  display: flex;
  width: 100%;
}

a {
  text-decoration: none;
  transition: 0.3s;
}

html,
body {
  scroll-behavior: smooth;
}

body {
  font-family: "Montserrat", sans-serif;
}

.header {
  background-image: url("assets/header-bg.png");
  background-position: center center;
  background-size: cover;
  background-repeat: no-repeat;
}

nav {
  width: 100%;
  margin-inline: auto;
  display: flex;
  align-items: center;
  justify-content: space-around;
  flex-wrap: wrap;
}

.nav__header {
  padding: 1rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: transparent;
}

.nav__logo img {
  max-width: 100px;
}

.nav__logo-dark {
  display: none;
}

.nav__menu__btn {
  font-size: 1.5rem;
  color: black;
  cursor: pointer;
}

.nav__links{
  display: flex; 
  align-items: center;
}
.nav__links li{
  margin: 0 13px;
  }

.header__container {
  display: grid;
  gap: 2rem;
  overflow: hidden;
}

.header__image img {
  max-width: 600px;
  margin-inline: auto;
}

.header__content h2 {
  max-width: 400px;
  margin-inline: auto;
  margin-bottom: 2rem;
  padding: 1rem 2rem;
  font-size: 1.75rem;
  font-weight: 400;
  font-family: var(--header-font-2);
  color: var(--primary-color);
  border: 2px dashed var(--primary-color);
  text-align: center;
}

.header__content h1 {
  font-size: 2rem;
  font-weight: 500;
  font-family: var(--header-font-1);
  color: var(--primary-color);
  line-height: 3.5rem;
  text-align: center;
  text-shadow: 2px 2px var(--white);
}

.header__content h1 span {
  font-size: 3rem;
}

.banner__container {
  display: grid;
  gap: 1rem;
  grid-auto-rows: 200px;
}

.banner__card {
  padding: 1rem;
  background-position: center center;
  background-size: cover;
  background-repeat: no-repeat;
  border-radius: 1rem;
}

.banner__card:nth-child(1) {
  background-image: url("assets/biriyani\ sac.jpg");
}

.banner__card:nth-child(2) {
  background-image: url("assets/idly\ sac.jpg");
}

.banner__card:nth-child(3) {
  background-image: url("assets/dosa1\ sac.jpg");
}

.banner__card p {
  margin-bottom: 0.5rem;
  font-size: 1.5rem;
  font-weight: 500;
  color: var(--white);
}

.banner__card h4 {
  font-size: 2rem;
  font-weight: 600;
  color: var(--white);
}

.order__container h3 {
  max-width: fit-content;
  margin-inline: auto;
  margin-bottom: 1rem;
  padding: 0.5rem 2rem;
  font-size: 1.5rem;
  font-weight: 400;
  font-family: var(--header-font-2);
  color: var(--primary-color);
  background-color: var(--secondary-color);
}

.order__container .section__header {
  margin-bottom: 1rem;
}

.order__container .section__description {
  margin-bottom: 2rem;
  text-align: center;
}

.order__grid {
  display: grid;
  gap: 2rem 1rem;
}

.order__card {
  padding: 2rem 1rem;
  border-radius: 1rem;
  text-align: center;
  transition: 0.3s;
}

.order__card:hover {
  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.1);
}

.order__card img {
  max-width: 250px;
  margin-inline: auto;
  margin-bottom: 2rem;
  filter: drop-shadow(10px 10px 30px rgba(0, 0, 0, 0.3));
}

.order__card h4 {
  margin-bottom: 1rem;
  font-size: 1.5rem;
  font-weight: 600;
  color: var(--text-dark);
}

.order__card p {
  margin-bottom: 2rem;
  font-weight: 500;
  color: var(--text-dark);
  line-height: 1.75rem;
}

.event__content {
  display: grid;
  gap: 2rem;
  padding: 1rem;
  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1);
}

.event__details {
  text-align: center;
}

.event__details h3 {
  font-size: 2rem;
  font-weight: 500;
  font-family: var(--header-font-2);
  color: var(--text-dark);
}

.event__details .section__header {
  margin-bottom: 1rem;
}

.reservation {
  position: relative;
  isolation: isolate;
}

.reservation__container h3 {
  font-size: 2rem;
  font-weight: 500;
  font-family: var(--header-font-2);
  color: var(--text-dark);
  text-align: center;
}

.reservation__container form {
  max-width: 400px;
  margin-inline: auto;
  margin-top: 4rem;
  display: grid;
  gap: 1rem;
}

.reservation__container input {
  padding: 0.75rem 1rem;
  outline: none;
  border: 1px solid var(--text-dark);
  font-size: 1rem;
  color: var(--text-dark);
}

.reservation__container input::placeholder {
  color: var(--text-dark);
}

.reservation img {
  display: none;
}

.footer {
  background-image: url("assets/footer-bg.png");
  background-position: center center;
  background-size: cover;
  background-repeat: no-repeat;
}

.footer__logo img {
  max-width: 250px;
}

.footer__content {
  margin-top: 2rem;
  display: grid;
  gap: 2rem;
}

.footer__content p {
  font-weight: 5500;
  color: var(--white);
  line-height: 1.75rem;
}

.footer__links {
  list-style: none;
  display: grid;
  gap: 1rem;
}

.footer__links li {
  display: flex;
  align-items: center;
  gap: 1rem;
  font-weight: 500;
  color: var(--white);
}

.footer__links li span {
  font-size: 1.25rem;
}

.footer__socials {
  margin-top: 2rem;
  display: flex;
  align-items: center;
  gap: 1rem;
}

.footer__socials a {
  font-size: 1.5rem;
  color: var(--white);
}

.footer__socials a:hover {
  color: var(--secondary-color);
}

.footer__bar {
  padding: 1rem;
  font-size: 0.9rem;
  color: var(--white);
  text-align: center;
}

@media (width > 540px) {
  .banner__container {
    grid-template-columns: repeat(2, 1fr);
  }

  .banner__card:nth-child(1) {
    grid-area: 1/1/2/3;
  }

  .order__grid {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (width > 768px) {
  nav {
    position: static;
    padding: 2rem 1rem;
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 1rem;
  }

  .nav__header {
    padding: 0;
    background-color: transparent;
  }

  .nav__logo img {
    max-width: 250px;
  }

  .nav__logo-dark {
    display: flex;
  }

  .nav__logo-white {
    display: none;
  }

  .nav__menu__btn {
    display: none;
  }

  .nav__links {
    position: static;
    padding: 0;
    flex-direction: row;
    justify-content: flex-end;
    background-color: transparent;
    transform: none;
    z-index: 1;
  }

  .nav__links a {
    color: var(--primary-color);
  }

  .nav__links a:hover {
    color: var(--tertiary-color);
  }

  .header__container {
    grid-template-columns: repeat(2, 1fr);
    align-items: center;
  }

  .header__image {
    grid-area: 1/2/2/3;
  }

  .header__content h2 {
    margin-inline-start: unset;
  }

  .header__content h1 {
    text-align: left;
  }

  .banner__card {
    padding: 1.5rem;
  }

  .banner__card:nth-child(1) {
    grid-area: 1/1/3/2;
  }

  .order__grid {
    grid-template-columns: repeat(3, 1fr);
  }

  .event__content {
    grid-template-columns: repeat(2, 1fr);
    align-items: center;
  }

  .event__image {
    grid-area: 1/2/2/3;
  }

  .event__details,
  .event__details .section__header {
    text-align: left;
  }

  .reservation__container form {
    max-width: 600px;
    grid-template-columns: repeat(2, 1fr);
  }

  .reservation img {
    display: flex;
    position: absolute;
    z-index: -1;
  }

  .reservation__bg-1 {
    left: 0;
    top: 0;
    width: clamp(100px, 25vw, 350px);
  }

  .reservation__bg-2 {
    right: 0;
    bottom: 0;
    width: clamp(100px, 20vw, 250px);
  }

  .footer__content {
    grid-template-columns: repeat(2, 1fr);
  }

  .footer__links li {
    justify-content: flex-end;
  }

  .footer__socials {
    justify-content: flex-end;
  }
}

@media (width > 1024px) {
  .order__grid {
    gap: 2rem;
  }
}

